--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ html {
 
 /* Utilties */
 
+img {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
 .btn {
     cursor: pointer;
 }
@@ -24,6 +30,10 @@ html {
 .heading-2 {
     font-size: 4rem;
     font-weight: 600;
+}
+
+.heading-3 {
+    font-size: 2.5rem;
 }
 
 .flex {
@@ -123,9 +133,6 @@ html {
 
 /* Donate-plan */
 
-.donate-plan {
-    
-}
 
 .donate-plan__text-container {
     padding: 0 !important;
@@ -156,4 +163,20 @@ html {
 
 .card--3 {
     background-color: rgba(114, 114, 226, 0.55);
+}
+
+/* Help */
+
+.help__flex-width {
+    gap: 4rem;
+    padding: 8rem 16rem;
+}
+
+.help__flex-width > * {
+    flex: 1 1 50%;
+}
+
+.help__img {
+    background-color: red;
+    border-radius: 10px;
 }
