--- a/style.css
+++ b/style.css
@@ -18,9 +18,6 @@ img {
     display: block;
 }
 
-.btn {
-    cursor: pointer;
-}
 
 .heading-1 {
     font-size: 5rem;
@@ -154,15 +151,15 @@ img {
 }
 
 .card--1 {
-    background-color: rgba(114, 114, 226, 0.25);
+    background-color: rgba(224,18,52,.35);
 }
 
 .card--2 {
-    background-color: rgba(114, 114, 226, 0.45);
+    background-color: rgba(218, 33, 64, 0.4);
 }
 
 .card--3 {
-    background-color: rgba(114, 114, 226, 0.55);
+    background-color: rgba(227, 28, 61, 0.5);
 }
 
 /* Help */
@@ -179,4 +176,54 @@ img {
 .help__img {
     background-color: red;
     border-radius: 10px;
+}
+
+/* Newsletter */
+
+.newsletter {
+    padding: 3rem 0;
+}
+
+.newsletter__heading {
+    margin-bottom: 1rem;
+}
+
+.newsletter__text {
+    margin-bottom: 5rem;
+}
+
+.newsletter__form {
+    background-color: rgba(218, 33, 64, 0.3);
+    padding: 6rem;
+
+    position: relative;
+}
+
+.newsletter__input {
+    display: inline-block;
+    width: 60%;
+
+    padding: 1.2rem 2.5rem;
+    background-color: rgb(182, 182, 182);
+    border: none;
+    border-radius: 4px;
+    font-size: 1.6rem;
+}
+
+.newsletter__input::-webkit-input-placeholder {
+    color: rgb(32, 32, 32);
+    font-size: 1.6rem;
+}
+
+.newsletter__btn {
+    border: none;
+    border-radius:0 4px 4px 0;
+    font-size: 1.6rem;
+    background: linear-gradient(to right bottom, rgb(224, 18, 52), rgb(164, 11, 37));
+    display: inline-block;
+    padding: 1.2rem 3.5rem;
+    color: #fff;
+    position: absolute;
+    right: 16rem;
+
 }
