--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ img {
     font-size: 2.5rem;
 }
 
+
 .flex {
     display: flex;
     justify-content: center;
@@ -181,7 +182,7 @@ img {
 /* Newsletter */
 
 .newsletter {
-    padding: 3rem 0;
+    padding: 3rem 0 10rem;
 }
 
 .newsletter__heading {
@@ -226,4 +227,20 @@ img {
     position: absolute;
     right: 16rem;
 
+}
+
+/* Footer */
+
+.footer {
+    background-color: rgb(4, 3, 33);
+    padding: 2rem 0;
+    color: #fff;
+}
+
+.footer__heading {
+    font-family: 'The Nautigal', cursive;
+}
+
+.footer__inspiration {
+    font-size: 1.2rem;
 }
